[package]
name = "ikigai-fs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Capability-gated file/store ikigai module: jailed to a root with a default-deny path-ACL; SOURCE/SINK/EXISTS/DELETE. Native std::fs today; a browser localStorage backend is planned, so the same module links into native and wasm32 hosts."
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-fs"
homepage = "https://github.com/ikigai-rs/ikigai-fs"
readme = "README.md"
keywords = ["ikigai", "roc", "resolution", "module", "capability"]
categories = ["filesystem", "wasm"]

[dependencies]
# The released kernel, consumed from crates.io — the SAME version the hosts use,
# so a host links exactly one `ikigai-core` (no duplicate-crate type mismatch).
# 0.1.7 is the first release carrying the `Capability` ACL surface this module
# needs (`is_root`, `scopes`).
ikigai-core = "0.1.7"
async-trait = "0.1"

[dev-dependencies]
futures = "0.3"
