[package]
name = "ikigai-fs"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Capability-gated file/store ikigai module: jailed to a root with a default-deny path-ACL; SOURCE/SINK/EXISTS/DELETE. A cfg-gated backend links into native (std::fs) and wasm32 (browser localStorage) hosts from one crate."
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-fs"
homepage = "https://github.com/ikigai-rs/ikigai-fs"
readme = "README.md"
keywords = ["ikigai", "roc", "resolution", "module", "capability"]
categories = ["filesystem", "wasm"]

[dependencies]
# The released kernel, consumed from crates.io — the SAME version the hosts use,
# so a host links exactly one `ikigai-core` (no duplicate-crate type mismatch).
# 0.1.9 carries the golden-thread surface the cacheable file mode needs:
# `Representation::depends_on` and the kernel's auto-cut on a `Sink`.
ikigai-core = "0.1.35" # ActionSpec (per-verb contracts)
async-trait = "0.1"

# Browser backend: localStorage via web-sys. wasm32-only — native hosts don't pull
# it, so the `std::fs` path stays dependency-light.
[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[dev-dependencies]
futures = "0.3"
